--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       const web3 = new Web3('http://localhost:8545');
 
       // Get the smart contract contract.
-      const earthquakeDataContract = new web3.eth.Contract([
+      const earthquakeDataContract = new web3.eth.Contract([0x9a3103107803e9cD86750a4b02893772F0202212
       [
 	{
 		"inputs": [
